[gd_scene load_steps=4 format=3 uid="uid://unfth8w1gk4a"]

[ext_resource type="Script" uid="uid://cbv5clgg4c16m" path="res://game_management/screen_flow/lenguage_screen.gd" id="1_7x5ke"]
[ext_resource type="Theme" uid="uid://oxf8w7asp4eg" path="res://ui/main_theme.tres" id="2_ywn4w"]
[ext_resource type="Texture2D" uid="uid://kt3wf4436tjs" path="res://assets/textures/environment/wall.png" id="3_p00qh"]

[node name="LenguageScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7x5ke")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.10747974, 0.10747973, 0.107479684, 1)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_p00qh")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 23
theme_override_constants/margin_top = 23
theme_override_constants/margin_right = 23
theme_override_constants/margin_bottom = 23

[node name="ControlMargin" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/ControlMargin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.5
offset_top = -20.0
offset_right = 63.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ywn4w")

[node name="GridContainer" type="GridContainer" parent="MarginContainer/ControlMargin/PanelContainer"]
visible = false
layout_mode = 2
columns = 2

[node name="FrButton" type="Button" parent="MarginContainer/ControlMargin/PanelContainer/GridContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_ywn4w")
text = "Français"

[node name="KrButton" type="Button" parent="MarginContainer/ControlMargin/PanelContainer/GridContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_ywn4w")
text = "한국어"

[node name="ChButton" type="Button" parent="MarginContainer/ControlMargin/PanelContainer/GridContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_ywn4w")
text = "简体中文"

[node name="RsButton" type="Button" parent="MarginContainer/ControlMargin/PanelContainer/GridContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_ywn4w")
text = "Русский"

[node name="JpButton" type="Button" parent="MarginContainer/ControlMargin/PanelContainer/GridContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_ywn4w")
text = "日本語"

[node name="PolButton" type="Button" parent="MarginContainer/ControlMargin/PanelContainer/GridContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_ywn4w")
text = "Polski"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ControlMargin/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 11
theme_override_constants/margin_top = 11
theme_override_constants/margin_right = 11
theme_override_constants/margin_bottom = 11

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ControlMargin/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="EspButton" type="Button" parent="MarginContainer/ControlMargin/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ywn4w")
text = "Español"

[node name="EngButton" type="Button" parent="MarginContainer/ControlMargin/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ywn4w")
text = "English"

[connection signal="pressed" from="MarginContainer/ControlMargin/PanelContainer/GridContainer/FrButton" to="." method="_on_fr_button_pressed"]
[connection signal="pressed" from="MarginContainer/ControlMargin/PanelContainer/GridContainer/KrButton" to="." method="_on_kr_button_pressed"]
[connection signal="pressed" from="MarginContainer/ControlMargin/PanelContainer/GridContainer/ChButton" to="." method="_on_ch_button_pressed"]
[connection signal="pressed" from="MarginContainer/ControlMargin/PanelContainer/GridContainer/RsButton" to="." method="_on_rs_button_pressed"]
[connection signal="pressed" from="MarginContainer/ControlMargin/PanelContainer/GridContainer/JpButton" to="." method="_on_jp_button_pressed"]
[connection signal="pressed" from="MarginContainer/ControlMargin/PanelContainer/GridContainer/PolButton" to="." method="_on_pol_button_pressed"]
[connection signal="pressed" from="MarginContainer/ControlMargin/PanelContainer/MarginContainer/HBoxContainer/EspButton" to="." method="_on_esp_button_pressed"]
[connection signal="pressed" from="MarginContainer/ControlMargin/PanelContainer/MarginContainer/HBoxContainer/EngButton" to="." method="_on_eng_button_pressed"]
